--- a/templates/messages/thread.html
+++ b/templates/messages/thread.html
@@ -7,23 +7,21 @@
     <div class="container" style="padding-top: 30px;">
 
         <div class="row">
-            <div class="col-md-8">
+            <div class="">
                 <h2>Messages</h2>
                 {% if messages %}
                     {% for m in messages %}
                         {% if m.sender == g.user['username'] %}
                             <div style="float: right; text-align: right; width: 100%">
-                                <p>From: {{ m.sender }}</p>
-                                <p>To: {{ m.recipient }}</p>
-                                <p>Message: {{ m.message }}</p>
-                                <p>Time: {{ m.dt }}</p>
+                                <div style="min-width:30%; background-color: cadetblue; padding: 2px 5px; margin-bottom: 5px; width: fit-content; float: right; border-radius: 5px;">
+                                    <p style="width: 100%; margin-bottom: 0; text-align: left;">{{ m.message }}<span style="float: right; color: lightgrey; font-size: 0.3rem;">{{ m.dt[-8:-3] }}</span></p>
+                                </div>
                             </div>
                         {% else %}
                             <div style="float: left; text-align: left; width: 100%;">
-                                <p>From: {{ m.sender }}</p>
-                                <p>To: {{ m.recipient }}</p>
-                                <p>Message: {{ m.message }}</p>
-                                <p>Time: {{ m.dt }}</p>
+                                <div style="min-width:30%; background-color: cadetblue; padding: 2px 5px; margin-bottom: 5px; width: fit-content; float: left; border-radius: 5px;">
+                                    <p style="width: 100%; margin-bottom: 0;">{{ m.message }}<span style="float: right; color: lightgrey; font-size: 0.3rem;">{{ m.dt[-8:-3] }}</span></p>
+                                </div>
                             </div>
                         {% endif %}
                     {% endfor %}
@@ -32,8 +30,8 @@
                 {% endif %}
             </div>
         </div>
-        <form method="POST">
-            <input type="text" name="message" id="message" placeholder="Type your message here">
+        <form method="POST" style="position: fixed; bottom: 15px; width: 90%;">
+            <input type="text" name="message" id="message" placeholder="Type your message here" style="width: 80%;">
             <input type="submit" name="submit" id="submit" value="Send">
         </form>
     </div>
