--- a/templates/messages/thread.html
+++ b/templates/messages/thread.html
@@ -3,8 +3,16 @@
 {% block title %}Test Message App | Home{% endblock %}
 
 {% block content %}
+<style>
+    body{
+        background-color: #fdecec;
+    }
+    h2 {
+        color: black;
+    }
+</style>
 
-    <div class="container" style="padding-top: 30px;">
+    <div class="container thread" style="padding-top: 30px;">
 
         <div class="row">
             <div class="">
