--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/superhero/bootstrap.min.css">
 
-        <link href="{{ url_for('static', filename='styles/main.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='styles/styles.css') }}" rel="stylesheet">
 
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
