--- a/templates/messages/index.html
+++ b/templates/messages/index.html
@@ -5,6 +5,7 @@
 {% block content %}
 
     <div class="container" style="padding-top: 50px;">
+        <div id="picture"></div>
 
         <div class="row">
             <div class="col-md-4">
